--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "testAll": "react-scripts test --watchAll --silent",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
