--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-server": "json-server --watch db.json --port 3001",
+    "start-testing-server": "cp testing-db-data.json testing-db.json && json-server --watch testing-db.json --port 3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "testAll": "react-scripts test --watchAll --silent",
+    "test-all": "react-scripts test --watchAll --silent",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": ["react-app", "plugin:cypress/recommended"]
   },
   "browserslist": {
     "production": [
@@ -41,7 +43,9 @@
     ]
   },
   "devDependencies": {
-    "@material-ui/icons": "^4.9.1"
+    "@material-ui/icons": "^4.9.1",
+    "cypress": "^5.0.0",
+    "eslint-plugin-cypress": "^2.11.1"
   },
   "jest": {
     "snapshotSerializers": [
